# DingooPie

./: .gitignore  CMakeLists.txt  README.md  RELEASE_README.md  THIRD_PARTY.md  configure_win64.bat
cheats/: README.md  七夜正式版.cht  天地道.cht  天地道II.cht  战神刑天.cht  极限漂移.cht
dingoo_pie/: app.manifest  app_icon.rc  app_loader.cpp  app_loader.h  app_metadata.h  app_paths.cpp  app_paths.h  cheat_engine.cpp  cheat_engine.h  cheat_finder.cpp  cheat_finder.h  cheat_manager_ui.cpp  cheat_manager_ui.h  cheat_runtime.cpp  cheat_runtime.h  common_types.h  compat_profile.cpp  compat_profile.h  crash_log.cpp  crash_log.h  debug_console.cpp  debug_console.h  debugger_ui.cpp  debugger_ui.h  emulated_memory.cpp  emulated_memory.h  emulator_config.h  emulator_core.cpp  emulator_core.h  emulator_options.cpp  emulator_options.h  emulator_settings.cpp  emulator_settings.h  execution_backend.cpp  execution_backend.h  framebuffer.cpp  framebuffer.h  frontend_menu.cpp  frontend_menu.h  guest_audio.cpp  (+48 more)
docs/: A320_X760_PLUS_3D_BASELINES.md  ARCHITECTURE.md  DEBUGGING.md  PACKAGING.md  README.md
patches/: ppsspp-irjit-dingoo.patch
release/: README.md  manifest.sha256
scripts/: bootstrap_windows.ps1  build_release.ps1  debug_output_regression.ps1  package_project.ps1  profile_sample.ps1  profile_samples.ps1  quit_sample.ps1  quit_samples.ps1  savestate_samples.ps1  smoke_test.ps1
tools/dingoo_app_tool/: .gitignore  CMakeLists.txt  README.md  build_win64.ps1
tools/dingoo_app_tool/src/: app_format.cpp  app_format.h  app_gui.cpp  file_util.cpp  file_util.h  json_manifest.cpp  json_manifest.h  main.cpp  stx_editor.cpp  stx_editor.h
